Fixed Offcenter Hit Area, Fixed Image Load Race, Modified Layout
Padding on the canvas was causing the off-center hit area issue
where the hit area would shift based on the objects position relative
to the center of the canvas.

Preloaded images are loaded before initializeding the websocket.
It initializes at the start of the game's create function.

Counter was moved to the sidebar and made smaller. The grid was made
transparent. Background tokens appear behind it and foreground
tokens appear in front of it.

--- a/main.css
+++ b/main.css
@@ -4,15 +4,15 @@ body {
 }
 
 .buttons {
-    font-size: 4em;
+    font-size: 1em;
     display: flex;
     justify-content: center;
 }
 
 .button, .value {
     line-height: 1;
-    padding: 2rem;
-    margin: 2rem;
+    padding: 1rem;
+    margin: 1rem;
     border: medium solid;
     min-height: 1em;
     min-width: 1em;
@@ -32,13 +32,9 @@ body {
 }
 
 .value {
-    min-width: 2em;
+    min-width: 1em;
 }
 
 .state {
-    font-size: 2em;
-}
-
-canvas {
-    padding: 2rem;
+    font-size: 1em;
 }
